# rest-jwt-rust

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
migrations/2024-07-14-170753_create_users/: up.sql
migrations/2024-07-14-170916_create_transactions/: up.sql
migrations/2024-07-15-154217_add_password_field_to_users_table/: down.sql  up.sql
migrations/2024-07-16-113114_add_login_session_to_users_table/: down.sql  up.sql
src/: constants.rs  main.rs  schema.rs  tests.rs  utils.rs
src/configuration/: db.rs  mod.rs  routes.rs  types.rs
src/controllers/: mod.rs  transaction_controller.rs  types.rs  user_controller.rs
src/middlewares/: auth.rs
src/models/: mod.rs  transaction_model.rs  user_model.rs  user_token.rs
src/services/: errors.rs  mod.rs  transaction_service.rs  user_service.rs
