[package]
name = "rest-jwt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.9"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
log = "0.4.18"
anyhow = "1.0.86"
env_logger = "0.10.0"
diesel_migrations = "2.1.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
dotenv = "0.15.0"
futures = "0.3.28"
failure = "0.1.8"
derive_more = "0.99.17"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
base64 = "0.21.2"
http = "0.2.12"

